# NX2-ProController-Emulation

./: CMakeLists.txt  README.md  switch_serial_test.py
src/: AES_128_ECB.h  main.c  tusb_config.h  usb_descriptors.c
